--- a/org.softwarefm.softwarefm/README
+++ b/org.softwarefm.softwarefm/README
@@ -25,3 +25,5 @@ RELEASE NOTES:
 1.7.3: Speed up: cached results for project look up
 1.7.5: Now use name spaces Code: and Artifact:
 1.7.6: Project renamed to Artifact throughout code base
+1.7.7: Attempting to fix issue in which code didn't work on mac
+1.7.8: No longer shipping with eclipse files
