--- a/org.softwarefm.softwarefm/README
+++ b/org.softwarefm.softwarefm/README
@@ -26,3 +26,4 @@ RELEASE NOTES:
 1.7.6: Project renamed to Artifact throughout code base
 1.7.7: Attempting to fix issue in which code didn't work on mac
 1.7.8: No longer shipping with eclipse files
+1.7.10: Error messages in forms now give more feedback
