--- a/eclipse/README
+++ b/eclipse/README
@@ -1,19 +1,18 @@
 
 Known Issues:
 * Need special handling of rt.jar / classes.jar
-* Doesn't run on Macintoshes
+* Doesn't run on some Mac
 * Need a better naming convention for nested classes.
 	For example should be package/parentClass/nestedClass, and has to work with nested/nested etc classes
 * Anonymous classes are handled very poorly: package//method is not a good url
-* Doesn't detect classes/methods in jars
-* When views close, the listeners are not disposed
+* Occasional loss of Url in title bar
 
 The build process sucks. Big time conflict between Maven and Eclipse
 * You need to run "build.bat" which will:
 ** build / run tests / install the jars org.sofwarefm.utilities and org.softwarefm.eclipse into the maven repository
 ** copy the required jars from the maven repository to the lib folder of the org.softwarefm.software folder
 ** You need to modify the first line "set m2=c:\users\phil\.m2\repository" to point to your maven repository
-** If you are a *nix user, then the batch file needs to be turned into a script file. For example \s need changing to / and the "copy" to "cp", and the files persmissions need to be made executable
+** If you are a *nix user, then the batch file needs to be turned into a script file. For example \s need changing to / and the "copy" to "cp", and the files permissions need to be made executable
 ** I will try and improve this in the near future 
   
   
@@ -28,3 +27,8 @@ RELEASE NOTES:
 1.7.8: No longer shipping with eclipse files
 1.7.10: Error messages in forms now give more feedback
 1.7.11: Browser has url line and buttons, selection story now works when windows opened / closed
+
+1.9.0: First release after long wait. Cleaned up code. Friends added. Urls changed to wwww.softwarefm.org and usage.softwarefm.org 
+1.9.1: Ensured that while editing, your edits are not killed by selection events
+1.9.2: Slightly improved layout
+1.9.3: Fixed bizarre issue with focus that causes selection events to be ignored until newly opened windows gained focus.
