--- a/eclipse/README
+++ b/eclipse/README
@@ -35,3 +35,4 @@ RELEASE NOTES:
 1.9.4: Bug fix around friend images
 1.9.5: Added http:// to urls, so that they work with Safari
 1.9.6: Better exception handling: tied to the eclipse logging framework instead of popups
+1.9.7: Tracking down logging in bug
