--- a/eclipse/README
+++ b/eclipse/README
@@ -36,3 +36,4 @@ RELEASE NOTES:
 1.9.5: Added http:// to urls, so that they work with Safari
 1.9.6: Better exception handling: tied to the eclipse logging framework instead of popups
 1.9.7: Tracking down logging in bug
+1.9.8: Tracking down bug caused by listeners adding listeners, resulting in eclipse crash
