--- a/eclipse/README
+++ b/eclipse/README
@@ -38,3 +38,5 @@ RELEASE NOTES:
 1.9.7: Tracking down logging in bug
 1.9.8: Tracking down bug caused by listeners adding listeners, resulting in eclipse crash
 1.9.9: Added profiling, changed how listeners interact with SWT thread
+1.9.10: new skin added. This skin requires scrapping differently
+1.9.11: Fixing build issue with 1.9.10
