--- a/eclipse/README
+++ b/eclipse/README
@@ -41,3 +41,4 @@ RELEASE NOTES:
 1.9.10: new skin added. This skin requires scrapping differently
 1.9.11: Fixing build issue with 1.9.10
 1.10.1: Annotations added
+1.10.2: Hyperlink detection added
