--- a/eclipse/README
+++ b/eclipse/README
@@ -42,3 +42,4 @@ RELEASE NOTES:
 1.9.11: Fixing build issue with 1.9.10
 1.10.1: Annotations added
 1.10.2: Hyperlink detection added
+1.10.3: Personal comments and markers added, Refresh of caches when 'action=submit' in LocationListener
